--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <embed src="https://github.com/DeadAt0m/cv/raw/master/cv_eng.pdf" type="application/pdf">
+        <object data="../assets/files/cv_eng.pdf" width="100%" height="100%" type='application/pdf'></object>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/MMM/"></data>
