deploy: dc6b48060a362b15fcf39bdcc58cdefe6a63eebf

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://deadat0m.github.io/MMM/about/" />
 <meta property="og:site_name" content="DeadAt0m’s Notepad" />
 <script type="application/ld+json">
-{"description":"Various shitposts for my own purposes.","url":"https://deadat0m.github.io/MMM/about/","headline":"Curriculum vitae","@type":"WebSite","name":"DeadAt0m’s Notepad","@context":"https://schema.org"}</script>
+{"url":"https://deadat0m.github.io/MMM/about/","@type":"WebSite","name":"DeadAt0m’s Notepad","headline":"Curriculum vitae","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/MMM/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://deadat0m.github.io/MMM/feed.xml" title="DeadAt0m's Notepad" /><link rel="shortcut icon" type="image/x-icon" href="/MMM/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /><script src="https://hypothes.is/embed.js" async></script>
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <object data="../assets/files/cv_eng.pdf" width="100%" height="100%" type='application/pdf'></object>
+        <style> .pdf-embed-wrap-961ae6c7-04b6-4739-abec-abae27d40c92 { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-961ae6c7-04b6-4739-abec-abae27d40c92 { height: 100%; } .pdf-embed-container-961ae6c7-04b6-4739-abec-abae27d40c92 iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-961ae6c7-04b6-4739-abec-abae27d40c92"> <div class="pdf-embed-container-961ae6c7-04b6-4739-abec-abae27d40c92"> <iframe src="https://github.com/DeadAt0m/cv/raw/master/cv_eng.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/MMM/"></data>
