--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <style> .pdf-embed-wrap-2927e762-5c07-4d88-a11e-7b1c39d29491 { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-2927e762-5c07-4d88-a11e-7b1c39d29491 { height: 100%; } .pdf-link-2927e762-5c07-4d88-a11e-7b1c39d29491 { background-color: white; text-align: center; border-style: solid; } .pdf-embed-container-2927e762-5c07-4d88-a11e-7b1c39d29491 iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-2927e762-5c07-4d88-a11e-7b1c39d29491"> <div class="pdf-link-2927e762-5c07-4d88-a11e-7b1c39d29491"> <a href="https://github.com/DeadAt0m/cv/raw/master/cv_eng.pdf" target="_blank">View PDF</a> </div> <div class="pdf-embed-container-2927e762-5c07-4d88-a11e-7b1c39d29491"> <iframe src="https://github.com/DeadAt0m/cv/raw/master/cv_eng.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
+        <style> .pdf-embed-wrap-1c546291-30ca-46a1-b101-05bb97d1643f { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-1c546291-30ca-46a1-b101-05bb97d1643f { height: 100%; } .pdf-embed-container-1c546291-30ca-46a1-b101-05bb97d1643f iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-1c546291-30ca-46a1-b101-05bb97d1643f"> <div class="pdf-embed-container-1c546291-30ca-46a1-b101-05bb97d1643f"> <iframe src="/files/pdf/cv_eng.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/MMM/"></data>
