deploy: 06f4aed69b526662b386b6dcdfb95f5cb13d60c8

--- a/cv/index.html
+++ b/cv/index.html
@@ -10,11 +10,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Various shitposts for my own purposes." />
 <meta property="og:description" content="Various shitposts for my own purposes." />
-<link rel="canonical" href="https://deadat0m.github.io/MMM/about/" />
-<meta property="og:url" content="https://deadat0m.github.io/MMM/about/" />
+<link rel="canonical" href="https://deadat0m.github.io/MMM/cv/" />
+<meta property="og:url" content="https://deadat0m.github.io/MMM/cv/" />
 <meta property="og:site_name" content="DeadAt0m’s Notepad" />
 <script type="application/ld+json">
-{"url":"https://deadat0m.github.io/MMM/about/","@type":"WebSite","name":"DeadAt0m’s Notepad","headline":"Curriculum vitae","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
+{"url":"https://deadat0m.github.io/MMM/cv/","@type":"WebPage","headline":"Curriculum vitae","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/MMM/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://deadat0m.github.io/MMM/feed.xml" title="DeadAt0m's Notepad" /><link rel="shortcut icon" type="image/x-icon" href="/MMM/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /><script src="https://hypothes.is/embed.js" async></script>
@@ -77,12 +77,12 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/MMM/about/">Curriculum vitae</a><a class="page-link" href="/MMM/search/">Search</a><a class="page-link" href="/MMM/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/MMM/cv/">Curriculum vitae</a><a class="page-link" href="/MMM/search/">Search</a><a class="page-link" href="/MMM/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <style> .pdf-embed-wrap-45934faf-9e44-42f9-9961-6cded1fc48a2 { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-45934faf-9e44-42f9-9961-6cded1fc48a2 { height: 100%; } .pdf-embed-container-45934faf-9e44-42f9-9961-6cded1fc48a2 iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-45934faf-9e44-42f9-9961-6cded1fc48a2"> <div class="pdf-embed-container-45934faf-9e44-42f9-9961-6cded1fc48a2"> <iframe src="../assets/files/cv_eng.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
+        <style> .pdf-embed-wrap-6f184198-abb7-4ba7-875f-d29245c85ea9 { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-6f184198-abb7-4ba7-875f-d29245c85ea9 { height: 100%; } .pdf-embed-container-6f184198-abb7-4ba7-875f-d29245c85ea9 iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-6f184198-abb7-4ba7-875f-d29245c85ea9"> <div class="pdf-embed-container-6f184198-abb7-4ba7-875f-d29245c85ea9"> <iframe src="../assets/files/cv_eng.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/MMM/"></data>
