--- a/search/index.html
+++ b/search/index.html
@@ -10,14 +10,14 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Various shitposts for my own purposes." />
 <meta property="og:description" content="Various shitposts for my own purposes." />
-<link rel="canonical" href="https://deadat0m.github.io/MMM/search/" />
-<meta property="og:url" content="https://deadat0m.github.io/MMM/search/" />
+<link rel="canonical" href="https://deadat0m.github.io/notepad/search/" />
+<meta property="og:url" content="https://deadat0m.github.io/notepad/search/" />
 <meta property="og:site_name" content="DeadAt0m’s Notepad" />
 <script type="application/ld+json">
-{"url":"https://deadat0m.github.io/MMM/search/","@type":"WebPage","headline":"Search","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
+{"url":"https://deadat0m.github.io/notepad/search/","@type":"WebPage","headline":"Search","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/MMM/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://deadat0m.github.io/MMM/feed.xml" title="DeadAt0m's Notepad" /><link rel="shortcut icon" type="image/x-icon" href="/MMM/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" /><script src="https://hypothes.is/embed.js" async></script>
+<link rel="stylesheet" href="/notepad/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://deadat0m.github.io/notepad/feed.xml" title="DeadAt0m's Notepad" /><link rel="shortcut icon" type="image/x-icon" href="/notepad/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.css" integrity="sha512-h7nl+xz8wgDlNM4NqKEM4F1NkIRS17M9+uJwIGwuo8vGqIl4BhuCKdxjWEINm+xyrUjNCnK5dCrhM0sj+wTIXw==" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/katex.min.js" integrity="sha512-/CMIhXiDA3m2c9kzRyd97MTb3MC6OVnx4TElQ7fkkoRghwDf6gi41gaT1PwF270W6+J60uTmwgeRpNpJdRV6sg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.12.0/contrib/auto-render.min.js" integrity="sha512-Do7uJAaHZm5OLrIv/yN4w0iG1dbu01kzdMNnFfu/mAqgUk6Nniv2JYHcwH+cNwjqgLcqcuBBk+JRvprLVI8azg==" crossorigin="anonymous"></script>
@@ -67,7 +67,7 @@ window.onload = wrap_img;
 </head>
 <body><header class="site-header">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/MMM/">DeadAt0m&#39;s Notepad</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/notepad/">DeadAt0m&#39;s Notepad</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -77,14 +77,14 @@ window.onload = wrap_img;
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/MMM/cv/">Curriculum vitae</a><a class="page-link" href="/MMM/search/">Search</a><a class="page-link" href="/MMM/categories/">Tags</a></div>
+        <div class="trigger"><a class="page-link" href="/notepad/cv/">Curriculum vitae</a><a class="page-link" href="/notepad/search/">Search</a><a class="page-link" href="/notepad/categories/">Tags</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <!-- adapted from https://github.com/pmarsceill/just-the-docs -->
-<script type="text/javascript" src="/MMM/assets/js/search.js"></script>
-<script type="text/javascript" src="/MMM/assets/js/vendor/lunr.min.js"></script>
+<script type="text/javascript" src="/notepad/assets/js/search.js"></script>
+<script type="text/javascript" src="/notepad/assets/js/vendor/lunr.min.js"></script>
 
 <div class="search">
     <div class="search-input-wrap">
@@ -96,16 +96,16 @@ window.onload = wrap_img;
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/MMM/"></data>
+  <data class="u-url" href="/notepad/"></data>
 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/MMM/feed.xml">
+          <a href="/notepad/feed.xml">
             <svg class="svg-icon orange">
-              <use xlink:href="/MMM/assets/minima-social-icons.svg#rss"></use>
+              <use xlink:href="/notepad/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
           </a>
         </p>
@@ -115,7 +115,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/DeadAt0m" title="DeadAt0m"><svg class="svg-icon grey"><use xlink:href="/MMM/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://github.com/DeadAt0m" title="DeadAt0m"><svg class="svg-icon grey"><use xlink:href="/notepad/assets/minima-social-icons.svg#github"></use></svg></a></li></ul>
 </div>
 
   </div>
