--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://deadat0m.github.io/MMM/cv/" />
 <meta property="og:site_name" content="DeadAt0m’s Notepad" />
 <script type="application/ld+json">
-{"url":"https://deadat0m.github.io/MMM/cv/","@type":"WebPage","headline":"Curriculum vitae","description":"Various shitposts for my own purposes.","@context":"https://schema.org"}</script>
+{"description":"Various shitposts for my own purposes.","url":"https://deadat0m.github.io/MMM/cv/","@type":"WebPage","headline":"Curriculum vitae","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/MMM/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://deadat0m.github.io/MMM/feed.xml" title="DeadAt0m's Notepad" /><link rel="shortcut icon" type="image/x-icon" href="/MMM/images/favicon.ico"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Primer/15.2.0/primer.css" integrity="sha512-xTz2ys4coGAOz8vuV1NcQBkgVmKhsSEtjbqyMJbBHRplFuvKIUo6xhLHpAyPt9mfR6twHJgn9OgVLuqOvjeBhg==" crossorigin="anonymous" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
@@ -82,7 +82,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <style> .pdf-embed-wrap-a7a36988-c933-4026-a483-0fa9515e892c { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-a7a36988-c933-4026-a483-0fa9515e892c { height: 100%; } .pdf-embed-container-a7a36988-c933-4026-a483-0fa9515e892c iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-a7a36988-c933-4026-a483-0fa9515e892c"> <div class="pdf-embed-container-a7a36988-c933-4026-a483-0fa9515e892c"> <iframe src="../assets/files/cv.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
+        <style> .pdf-embed-wrap-5a4ab212-05b4-46c8-bbaa-1607eda10a2b { display:flex; flex-direction: column; width: 100%; height: 650px; } .pdf-embed-container-5a4ab212-05b4-46c8-bbaa-1607eda10a2b { height: 100%; } .pdf-embed-container-5a4ab212-05b4-46c8-bbaa-1607eda10a2b iframe { width: 100%; height: 100%; } </style> <div class="pdf-embed-wrap-5a4ab212-05b4-46c8-bbaa-1607eda10a2b"> <div class="pdf-embed-container-5a4ab212-05b4-46c8-bbaa-1607eda10a2b"> <iframe src="../assets/files/cv.pdf" frameborder="0" allowfullscreen></iframe> </div> </div>
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/MMM/"></data>
